--- a/style.css
+++ b/style.css
@@ -88,3 +88,31 @@ ul li::before {
   width: 1em;
   margin-left: -1em;
 }
+
+.logos {
+  text-align: center;
+}
+.vendor-logo {
+  padding: 10px;
+  width: 120px;
+}
+
+.image-row {
+  display: flex; 
+  justify-content: center; 
+  align-items: center;
+}
+
+.image-row img {
+  width: 200px;
+  margin: 0 20px; 
+}
+
+a {
+  color: #116f85;
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+}
